<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:background="#EFEDE6"
    android:orientation="vertical"
    tools:context="br.com.hsacademy.app.Signup.SignupActivity">

    <ProgressBar
        android:id="@+id/signup_pbar_status"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:indeterminate="true"
        android:visibility="invisible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_et_first_name"
                style="@style/TIL_Style">

                <EditText
                    style="@style/ItemLogin"
                    android:ems="10"
                    android:hint="@string/firt_name"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_et_last_name"
                style="@style/TIL_Style">

                <EditText
                    style="@style/ItemLogin"
                    android:ems="10"
                    android:hint="@string/last_name"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_et_email"
                style="@style/TIL_Style">

                <EditText
                    style="@style/ItemLogin"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/signup_et_password"
                style="@style/TIL_Style"
                android:layout_marginTop="8dp"
                tools:ignore="UnusedAttribute">

                <EditText
                    style="@style/ItemLogin"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    tools:ignore="HardcodedText,PxUsage" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/signup_tv_strengh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:text="@string/password_strength" />

            <ProgressBar
                android:id="@+id/signup_pbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff" />

            <Button
                android:id="@+id/signup_btn_signup"
                style="@style/ItemLogin"
                android:layout_gravity="bottom"
                android:layout_marginTop="46dp"
                android:background="#57BB89"
                android:text="@string/sign_up" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
